--- a/_config.yml
+++ b/_config.yml
@@ -7,15 +7,12 @@
 
 # Site settings
 title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+email: info@revolutiongamehouse.com
+description: > # Games, grub, and grog at the premier board game cafe of St. Louis,
+  soon to open on the Delmar Loop The community we want in the city we love.
+  Check out our kickstarter.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://revolutiongamehouse.com" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
