--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site settings
 title: Revolution Game House
-email: info@revolutiongamehouse.com
+email: info@revolutioncafe.org
 description: > #
   Games, grub, and grog at the premier board game cafe of St. Louis,
   soon to open on the Delmar Loop The community we want in the city we love.
   Check out our kickstarter.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://revolutiongamehouse.com" # the base hostname & protocol for your site
+url: "http://revolutioncafe.org" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
